# pcc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: tinycc_roadmap.md
example/: nsieve_selfcontained.c
example/fwdproto/: fwdlib.c  fwdlib.h  main.c
example/globals/: globals_single.c
example/goto/: goto_single.c  goto_state_machine.c
example/hashmap/: hashmap.c  hashmap.h  hashmap_single.c  main.c
example/libtcc1/: intconv.h  main.c
example/transitive/: base.h  helper.c  main.c  solo.c  umbrella.h
pcc/: __main__.py  bindgen.py  c_ast.py  c_parser.py  c_token.py  driver.py  lexer.py  pythoc_backend.py
test/: gen_func_smoke.py  marshal_probe.py  probe_single_struct.py  run_all_tests.py  run_integration_tests.py  run_unit_tests.py  test_bindings_lexer.py  test_bindings_lexer_complex.py  test_bindings_parser.py  test_c_ast.py  test_c_parser.py  test_forward_proto.py  test_globals_pipeline.py  test_goto_pipeline.py  test_goto_statemachine_pipeline.py  test_hashmap_multifile.py  test_hashmap_pipeline.py  test_libtcc1_stepping_stone.py  test_pythoc_backend.py  test_transitive_header.py  triage_tinycc.py
test/utils/: test_utils.py
